--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,8 +7,11 @@
 
   <div class="container" *ngIf="user != undefined">
     <span>{{user.displayName}}</span>
-    <img class="iconUser" src="assets/icons/ic_account_circle_white_24px.svg">
+    <img class="iconUser" [matMenuTriggerFor]="profileMenu" src="assets/icons/ic_account_circle_white_24px.svg">
   </div>
 
+  <mat-menu #profileMenu="matMenu">
+    <button mat-menu-item (click)="logout()">LogOut</button>
+  </mat-menu>
+
 </mat-toolbar>
-<app-login *ngIf="user == undefined"></app-login>
