--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,3 +1,29 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <div >
+    <mat-card class="card header">
+      <div>Horario</div><div>Actividad</div><div>Tipo</div><div>Profesor</div><div>Aula</div><div>Estado</div>
+    </mat-card>
+  </div>
+  <div *ngFor="let evento of eventos">
+    <mat-card class="card items mat-body-2">
+      <div>
+        {{evento.horario}}
+      </div>
+      <div>
+        {{evento.actividad}}
+      </div>
+      <div>
+        {{evento.tipo}}
+      </div>
+      <div>
+        {{evento.profesor}}
+      </div>
+      <div>
+        {{evento.aula}}
+      </div>
+      <div>
+        {{evento.estado}}
+      </div>
+    </mat-card>
+  </div>
+</div>
