--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -3,9 +3,13 @@
     flex-direction: row;
     justify-content: center;
 }
-.iconUser{
-    margin-left: 16px;
-    padding: 0px;
-    height: 32px;
-    width: 32px;
+.fecha{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* MOBILE */
+@media (max-width: 600px) {
+
 }
