Se agrego Filtro en home por actividad, prof, aula

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="container">
-
-    <li><input type="text" class="form-control" placeholder="Buscar" [(ngModel)]="searchText" (input)="searchTextToParent()" ></li>
-      
+    <form class="example-form">
+        <mat-form-field class="example-full-width">
+          <input matInput [(ngModel)]="queryString" id="search" placeholder="Buscar ..." [ngModelOptions]="{standalone: true}">
+      </mat-form-field>
+  </form>
   <div >
     <mat-card class="card header">
       <div>Horario</div>
@@ -12,7 +14,7 @@
       <div>Estado</div>
     </mat-card>
   </div>
-  <div *ngFor="let evento of eventos">
+  <div *ngFor="let evento of eventos | FilterPipe: queryString">
     <mat-card class="card items mat-body-2">
       <div>
         {{evento.horario}}
