--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background-color: #893242;
 }
 .fecha{
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
 }
 
 /* MOBILE */
