Correccion Imagenes para agregar al escritorio

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="container">
 
-  <img src="./assets/imagenes/logofaea.svg">
+  <img src="./assets/images/logofaea.svg">
 
   <div style="flex: 1 1"></div>
 
