--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -80,3 +80,7 @@
     </mat-card>
   </div>
 </div>
+
+<footer class="py-5 bg-light">
+  <p class="m-0 text-center">Copyright &copy; FaEA 2019 - Desarrollado por  <a href="http://gdgneuquen.org"><img class="logo" src="./assets/images/logogdg.png" width="150"></a></p> 
+</footer>
