--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form class="example-form">
+  <form class="example-form" *ngIf="buscarEnabled">
     <mat-form-field class="example-full-width">
       <input matInput [(ngModel)]="queryString" id="search" placeholder="Buscar ..." [ngModelOptions]="{standalone: true}">
     </mat-form-field>
